# threatzone-python-sdk

./: .actrc  .gitignore  LICENSE  README.md  pyproject.toml
.github/act-events/: pull_request.json  push.json  release.json  workflow_dispatch.json
.github/workflows/: README.md  ci.yml  publish.yml
docs/: RECIPES.md  TYPES.md
examples/: README.md  recipe_01_submit_and_wait.py  recipe_02_url_analysis.py  recipe_03_get_malicious_indicators.py  recipe_04_download_all_artifacts.py  recipe_05_search_by_sha256.py  recipe_06_export_network_iocs.py  recipe_07_handle_report_unavailable.py  recipe_08_paginate_submissions.py  recipe_09_discriminate_errors_by_code.py  recipe_10_async_client.py  recipe_11_daily_summary.py  recipe_12_mitre_cross_reference.py
scripts/: act-ci.sh  act-publish.sh  sdk-smoke-real-api.py
src/threatzone/: __init__.py  _async_client.py  _client.py  _config.py  _constants.py  _exceptions.py  _streaming.py  _sync_client.py
src/threatzone/testing/: __init__.py  _responses.py  fake_api.py  routes.py  scenarios.py  state.py
src/threatzone/types/: __init__.py  behaviours.py  cdr.py  common.py  config.py  downloads.py  eml.py  errors.py  indicators.py  me.py  mitre.py  network.py  processes.py  signature_check.py  static_scan.py  submissions.py  syscalls.py  url_analysis.py
tests/: __init__.py  conftest.py  test_async_client.py  test_client.py  test_exceptions.py  test_streaming.py  test_sync_client.py  test_types.py
tests/integration/: __init__.py  conftest.py  test_contract_pydantic.py  test_examples.py
tests/integration/flows/: __init__.py  test_flow_access_control.py  test_flow_cdr_lifecycle.py  test_flow_dynamic_lifecycle.py  test_flow_static_only.py  test_flow_url_lifecycle.py
tests/integration/recipes/: __init__.py  test_recipe_01_submit_and_wait.py  test_recipe_02_url_analysis.py  test_recipe_03_malicious_indicators.py  test_recipe_04_download_artifacts.py  test_recipe_05_search_by_sha256.py  test_recipe_06_export_network_iocs.py  test_recipe_07_report_unavailable.py  test_recipe_08_pagination.py  test_recipe_09_error_discrimination.py  test_recipe_10_async_client.py  test_recipe_11_daily_summary.py  test_recipe_12_mitre_cross_reference.py
